<resources>
    <string name="app_name">Get Together</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_next_step">Next Step</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="i_agree_statment">You further agree to comply with the supplemental terms and conditions set forth in this Agreement.</string>
    <string name="register">Register</string>
    <string name="font_fontFamily_medium">sans-serif-medium</string>
    <string name="tell_us">Tell us something about you...</string>
    <string name="profile_name">Profile</string>


    <string name="age_prompt">Select Age</string>
    <string-array name="age_array">
        <item>Select Age</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
    </string-array>

    <string name="city_prompt">Choose a country</string>
    <string name="app_title" />
    <string name="about_me">About me...</string>
    <string name="my_profile">My Profile</string>
    <string name="nearby">Nearby</string>
    <string name="followers">Followers</string>
    <string name="discover">Discover</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="or_sign_in">OR SIGN WITH A SOCIAL ACCOUNT</string>
    <string name="action_settings">setting</string>
    <string name="create_meet">Create Meet Up</string>
    <string name="tell_us_about_event">Tell us something about the event</string>
    <string name="add_event">Add Event</string>
    <string-array name="city_arrays">
        <item>Select City</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <!-- array for category on meetup popup -->
    <string name="category_prompt">Select Category</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string-array name="category_array">
        <item>Select Category</item>
        <item>Friend</item>
        <item>Close Friend</item>
        <item>People</item>
        <item>Friend of Friend</item>
        <item>Relative</item>
    </string-array>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Person Name</string>
    <string name="backdrop_subtitle">Place, Location</string>
    <string name="searchable">Searchable</string>
    <string name="search_here">Search Here</string>
    <string name="menu_search">Search</string>
    <string name="attending_peoples">Peoples are attending</string>
    <string name="title_activity_maps">Nearby</string>
</resources>
