<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <include layout="@layout/toolbar"
        android:id="@+id/my_toolbar"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_acc"
            android:textAlignment="center"
            android:textColor="#000000"
            android:text="CREATE YOUR ACCOUNT"
            android:fontFamily="verdena"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/full_name"
            android:textAlignment="center"
            android:hint="Full Name"
            android:background="#F3F3F3"
            android:fontFamily="verdena"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"/>

        <!--spinner2 for select age-->
        <Spinner
            android:id="@+id/spinner2"
            android:entries="@array/age_array"
            android:prompt="@string/age_prompt"
            android:layout_width="match_parent"
            android:drawableRight="@android:drawable/ic_menu_search"
            android:background="@drawable/down_arrow_backgraund"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            style="@android:style/Widget.DeviceDefault.DropDownItem"/>

        <!--spinner1 for select city-->
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/spinner1"
            android:entries="@array/city_arrays"
            android:prompt="@string/city_prompt"
            android:fontFamily="verdena"
            android:background="@drawable/down_arrow_backgraund"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            style="@android:style/Widget.DeviceDefault.DropDownItem"
            android:gravity="center"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/education"
            android:textAlignment="center"
            android:hint="Education"
            android:background="#F3F3F3"
            android:fontFamily="verdena"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:inputType="textMultiLine"
            android:id="@+id/tell_us_box"
            android:ems="10"
            android:gravity="top|left"
            android:textAlignment="textStart"
            android:paddingLeft="10dp"
            android:hint="@string/tell_us"
            android:background="#F3F3F3"
            android:fontFamily="verdena"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/register_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/next_step_btn"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>