<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="2dp"
    android:background="@drawable/popup_window_shape">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_close_black_24dp"
            android:onClick="onClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_meet"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:fontFamily="verdana"
            android:id="@+id/textView2"
            android:textSize="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"/>


        <!--spinner2 for select category-->
        <Spinner
            android:id="@+id/category_spinner"
            android:entries="@array/category_array"
            android:prompt="@string/age_prompt"
            android:layout_width="match_parent"
            android:background="@drawable/down_arrow_backgraund"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            style="@android:style/Widget.DeviceDefault.DropDownItem"/>

        <!--spinner1 for select date-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_ip"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:hint="Select Date"
            android:background="#F3F3F3"
            android:fontFamily="verdana"
            android:textSize="17dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"
            android:onClick="setDate"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/venue"
            android:textAlignment="center"
            android:hint="Venue"
            android:background="#F3F3F3"
            android:fontFamily="verdana"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/title"
            android:textAlignment="center"
            android:hint="Title"
            android:background="#F3F3F3"
            android:fontFamily="verdana"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:shadowRadius="60"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:inputType="textMultiLine"
            android:id="@+id/tell_us_event"
            android:ems="10"
            android:gravity="top|left"
            android:textAlignment="textStart"
            android:paddingLeft="10dp"
            android:hint="@string/tell_us_about_event"
            android:background="#F3F3F3"
            android:fontFamily="verdana"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15dp"/>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:id="@+id/camera"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_camera" />

            <Button
                android:id="@+id/register_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/next_step_btn"
                android:textAllCaps="false"
                android:layout_marginLeft="30dp"
                android:text="@string/add_event"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="#ffffff"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/group"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_group_add" />

        </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>