<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alluresoft.gettogether.MapsActivity">

    <include layout="@layout/toolbar_discover_tinder"
        android:id="@+id/toolbar_discover_tinder"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/map_layout"
        android:layout_below="@+id/toolbar_discover_tinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.3">
        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.alluresoft.gettogether.MapsActivity" />
        </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">
             <LinearLayout
                 android:orientation="horizontal"
                 android:id="@+id/symbol_icon"
                 android:background="#F3F3F3"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="6">
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:layout_weight="2">
                     <ImageView
                         android:id="@+id/nearby_map_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_location_on_black_24dp"
                         android:onClick="onClick"/>

                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:layout_weight="2">
                     <ImageView
                         android:id="@+id/followers_map_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_people_outline_black_24dp"
                         android:onClick="onClick"/>

                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:layout_weight="2">
                     <ImageView
                         android:id="@+id/discover_map_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_my_location_black_24dp"
                         android:onClick="onClick"/>

                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:layout_weight="2">
                     <ImageView
                         android:id="@+id/favourites_map_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_favorite_border_black_24dp"
                         android:onClick="onClick"/>

                 </LinearLayout>
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="0dp"
                     android:gravity="center"
                     android:layout_height="match_parent"
                     android:layout_weight="2">
                     <ImageView
                         android:id="@+id/profile_map_icon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_perm_identity_black_24dp"
                         android:onClick="onClick"/>

                 </LinearLayout>
       </LinearLayout>
            <LinearLayout
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:background="#F3F3F3"
                android:layout_below="@+id/symbol_icon">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby"
                        android:textSize="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textSize="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discover"
                        android:textSize="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favourites"
                        android:textSize="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_weight="2">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:textSize="10dp"/>
                </LinearLayout>
             </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
